# SentriHome

./: .gitignore  .gitmodules  API_GUIDE.md  DOCUMENTATION.md  README.md
ESP32 Files/Template FIles/: ILI9488_Working.ino  esp32_receiver.ino  esp32_transmitter.ino  tft_interface.cpp  tft_interface.h  wifi_udp.cpp
ESP32PairingApp/: CONFIG.md  DEBUGGING_GUIDE.md  QUICK_FIX.md  settings.gradle.kts
ESP32PairingApp/app/: build.gradle.kts
ESP32_Files/vscodeESPIDF/: setup(mySample2).html
ESP32_Files/vscodeESPIDF/s3-Display-firmware4.4.6/main/: CMakeLists.txt  api.cpp  display.cpp  display.h  displayDisarmAuth.cpp  displayMainMenu.cpp  displaySetupPage.cpp  filesys.cpp  filesys.h  idf_component.yml  main.cpp  setuppage.cpp  setuppage.h  wifi_udp.cpp  wifi_udp.h  wificonfig.cpp  wificonfig.h
ESP32_Files/vscodeESPIDF/s3-Display-firmware4.4.6/main/depreciated files/: setuppage.cpp  tft_interface.cpp  wifi_udp.cpp
Home_Security_App_Backend/: record.sh
Home_Security_App_Backend/backend/: index.js  package-lock.json  package.json  streamManager.js
Mobile App/: settings.gradle.kts
Mobile App/app/: build.gradle.kts
cloud-backend/: auth.js  driveClient.js  driveUploader.js  googleAuth.js  hlsCache.js  index.js  lifecycle.json  mongo.js  package-lock.json  package.json  s3Client.js  server.js
cloud-backend/models/: Device.js  Event.js  MotionAlert.js
cloud-backend/scripts/: smoke-test.sh
cloud-backend/tests/: auth.test.js
firmwareflasher/: CMakeLists.txt  main.cpp
frontend/: package-lock.json  vite.config.js
rasberry_pi_app/: API_DOCUMENTATION.md
(+132 files in other folders)
