idf_component_register(SRCS 
                        "main.cpp"
                        "setuppage.cpp"
                        "display.cpp"
                        "displayDisarmAuth.cpp"
                        "displayMainMenu.cpp"
                        "displaySetupPage.cpp"
                        "wifi_udp.cpp"
                    INCLUDE_DIRS ".")