idf_component_register(SRCS 
                        "main.cpp"
                        "display.cpp"
                        "displayDisarmAuth.cpp"
                        "displayMainMenu.cpp"
                        "displaySetupPage.cpp"
                        "filesys.cpp"
                        "wificonfig.cpp"
                    INCLUDE_DIRS ".")